--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "LiveScript": ">=1.2.0",
     "jade": ">=0.27.6",
-    "chokidar": "=0.8.0"
+    "chokidar": "=0.8.0",
+    "uglify-js": ">=2.4.16"
   }
 }
